<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/welcomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragments.WelcomeFragment">

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcomeTitle" />

        <TextView
            android:id="@+id/tvWelcomeSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvWelcomeSubtitle" />

        <Button
            android:id="@+id/btnInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnInstructions" />


    </LinearLayout>
</layout>