<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--  Used LinearLayout because the ui is very simple consists of view on top of each other  -->
    <LinearLayout
        android:id="@+id/instructionsFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        tools:context=".ui.fragments.InstructionsFragment">

        <TextView
            android:id="@+id/tvInstructionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructionsTitle" />

        <TextView
            android:id="@+id/tvInstructionsSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvInstructionsSubtitle" />

        <Button
            android:id="@+id/btnInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShoeList" />

    </LinearLayout>
</layout>